contour/manifests/httpbin/ingress-httpbin-with-tls.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: httpbin
spec:
  virtualhost:
    fqdn: host1.127-0-0-101.nip.io
    tls:
      secretName: ingress
  routes:
    - services:
        - name: httpbin
          port: 443
          protocol: tls
          validation:
            caSecret: internal-root-ca
            subjectName: httpbin
#---
#apiVersion: contour.heptio.com/v1beta1
#kind: IngressRoute
#metadata:
#  name: httpbin
#spec:
#  virtualhost:
#    fqdn: host1.127-0-0-101.nip.io
#    tls:
#      secretName: ingress
#  routes:
#    - match: /
#      services:
#      - name: httpbin
#        port: 443
#        validation:
#          caSecret: internal-root-ca
#          subjectName: httpbin
